# telegrambot

./: .env.example  .gitignore  alembic.ini  pyproject.toml  requirements.txt
assets/animations/: error_alert.tgs  success_payment.tgs  welcome.tgs
config/: __init__.py  base.py  bot_config.py  database.py  feature_flags.py  payment_gateways.py  redis.py  security.py
database/: base.py  engine.py  session.py
database/enums/: __init__.py  account_roles.py  financial_states.py
database/migrations/: env.py
database/models/: __init__.py  core_logs.py  investment.py  referral.py  ticket.py  transaction.py  user.py  wallet.py
database/repositories/: __init__.py  base_repo.py  financial_repo.py  user_repo.py
database/seeders/: __init__.py  plan_seeder.py
docker/: bot.Dockerfile  cron.Dockerfile  docker-compose.yml  worker.Dockerfile
scripts/: backup.py  create_admin.py  deploy.py  restore.py  setup.py
src/: __init__.py  app.py  main_bot.py  main_cron.py  main_worker.py
src/modules/: __init__.py
src/modules/active_investments/: __init__.py  dtos.py  handlers.py  services.py
src/modules/admin_panel/: __init__.py  dtos.py  handlers.py  keyboards.py  services.py
src/modules/analytics/: __init__.py  dtos.py  handlers.py  services.py
src/modules/announcements/: __init__.py  dtos.py  handlers.py  services.py
src/modules/audit_logs/: __init__.py  dtos.py  handlers.py  services.py
src/modules/authentication/: __init__.py  dtos.py  handlers.py  keyboards.py  services.py  states.py  validators.py
src/modules/backup_system/: __init__.py  dtos.py  handlers.py  services.py
src/modules/cron_jobs/: __init__.py  dtos.py  handlers.py  services.py
src/modules/daily_check_in/: __init__.py  dtos.py  handlers.py  keyboards.py  services.py
src/modules/daily_income/: __init__.py  dtos.py  handlers.py  services.py
src/modules/dashboard/: __init__.py  dtos.py  handlers.py  keyboards.py  services.py  states.py
src/modules/deposits/: __init__.py  dtos.py  handlers.py  keyboards.py  services.py  states.py
src/modules/file_storage/: __init__.py  dtos.py  handlers.py  services.py
src/modules/fraud_security/: __init__.py  dtos.py  handlers.py  services.py
src/modules/gift_codes/: __init__.py  dtos.py  handlers.py  keyboards.py  services.py
src/modules/investment_plans/: __init__.py  dtos.py  handlers.py  keyboards.py  services.py
src/modules/logs/: __init__.py  dtos.py  handlers.py  services.py
src/modules/media_manager/: __init__.py  dtos.py  handlers.py  services.py
src/modules/moderators/: __init__.py  dtos.py  handlers.py  services.py
src/modules/notifications/: __init__.py  dtos.py  handlers.py  services.py
src/modules/referral_rewards/: __init__.py  dtos.py  handlers.py  services.py
src/modules/referral_system/: __init__.py  dtos.py  handlers.py  keyboards.py  services.py
src/shared/: __init__.py
src/ui_system/: __init__.py  animation_manager.py  emoji_manager.py  keyboard_renderer.py  message_renderer.py  navigation_engine.py  screen_manager.py  ui_manager.py
tests/: __init__.py  conftest.py
tests/e2e/: test_bot_flows.py  test_payment_flows.py
tests/integration/: test_redis_db.py
tests/unit/: placeholder_unit.py
(+95 files in other folders)
