[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "investment_platform"
version = "1.0.0"
description = "Enterprise Telegram Investment Platform localized for NGN"
readme = "README.md"
requires-python = ">=3.13"
license = { text = "MIT" }
authors = [
    { name = "Developer Placeholder", email = "developer@domain.com.ng" }
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Financial and Insurance Industry",
    "Programming Language :: Python :: 3.13",
    "Operating System :: POSIX :: Linux",
    "Topic :: Communications :: Chat",
]
dependencies = [
    "aiogram>=3.17.0,<3.18.0",
    "SQLAlchemy>=2.0.38,<2.1.0",
    "asyncpg>=0.30.0,<0.31.0",
    "alembic>=1.14.1,<1.15.0",
    "redis>=5.2.1,<5.3.0",
    "celery>=5.4.0,<5.5.0",
    "APScheduler>=3.11.0,<3.12.0",
    "cryptography>=44.0.0,<45.0.0",
    "bcrypt>=4.2.1,<4.3.0",
    "pyjwt>=2.10.1,<2.11.0",
    "httpx>=0.28.1,<0.29.0",
    "python-dotenv>=1.0.1,<1.1.0",
    "Pillow>=11.1.0,<11.2.0",
    "reportlab>=4.3.1,<4.4.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.4,<8.4.0",
    "pytest-asyncio>=0.25.3,<0.26.0",
    "pytest-cov>=6.0.0,<6.1.0",
    "black>=24.10.0,<25.0.0",
    "ruff>=0.9.0,<0.10.0",
    "mypy>=1.14.0,<1.15.0",
    "types-redis>=4.6.0.20241001",
]

[tool.setuptools]
packages = ["src", "database", "config"]

[tool.black]
line-length = 88
target-version = ['py313']
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
  | database/migrations/versions
)/
'''

[tool.ruff]
target-version = "py313"
line-length = 88
exclude = ["database/migrations/versions/*"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "C90", # mccabe complexity
    "B",   # flake8-bugbear
    "UP",  # pyupgrade
]
ignore = []

[tool.ruff.lint.mccabe]
max-complexity = 10

[tool.ruff.lint.isort]
combine-as-imports = true
known-first-party = ["src", "database", "config"]

[tool.mypy]
python_version = "3.13"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "database.migrations.*"
ignore_errors = true

[tool.pytest.ini_options]
minversion = "8.0"
addopts = "-ra -q --cov=src --cov=database --cov-report=term-missing"
testpaths = ["tests"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::PendingDeprecationWarning",
]

[tool.coverage.run]
branch = true
source = ["src", "database"]
omit = [
    "*/__init__.py",
    "database/migrations/*",
    "tests/*",
]

[tool.coverage.report]
show_missing = true
fail_under = 80
